--- a/dsmixtures.tex
+++ b/dsmixtures.tex
@@ -101,19 +101,9 @@ University of St Andrews, St Andrews KY16 9LZ, Scotland}
 \begin{abstract}
 This version: \today %Remove this before submitting!
 
-[Dave - the final submitted version needs to be 25 pages long or less.  Can you work it so that some figures share a page (e.g., 4, 5, 6) so that we meet the limits?  I don't know how to do this]
-
-[From the author guidelines:
-``Papers appearing in the journal rarely have more than six (6) tables or figures combined; about three-fourths have 4 or less. When papers contain numerous tables and figures, editors will always ask that the number be reduced or that some tables and figures be moved to Supplementary Materials. Authors are strongly encouraged to be judicious in the use of tabular and graphical displays and should not combine what ought to be several tables or figures into very large single ones. Authors should also consider moving some tables and figures to Supplementary Material at the time of submission. Papers with an extreme number of tables and/or figures may be returned by the co-editor without review. It is recognized that graphical depictions or images are essential for conveying the message in some substantive areas. In such circumstances, more figures than in the typical submission may be appropriate, and authors should note this explicitly in a covering letter.''
-So, we need to note that we have more than typical, and exlain why. OR we could take matters into our own hands, and move e.g., figures 5 and 7 to an appendix?]
-
-[Dave - note - if we get desperate for space, then uncommenting the Times font option in the preamble above results in a slightly shorter document]
-
 We present a new class of models for the detection function in distance sampling surveys of wildlife populations, based on finite mixtures of simple parametric key functions such as the half-normal. The models share many of the features of the widely-used key function plus series expansion formulation: they are flexible, produce plausible shapes with a small number of parameters, allow incorporation of covariates in addition to distance and can be fit using maximum likelihood. One advantage over current methods is the mixtures are automatically monotonic non-increasing and non-negative, so constrained optimization is not required. The mixture formulation is compared to existing methods using extensive simulations and small case studies on real data. 
 
 [[** Len: need to finish by reporting more on our results Also say how they compare with current methods.  Say may be better at coping with spiked data.  **]]
-
-  
 \end{abstract}
 
 %  Please place your key words in alphabetical order, separated
@@ -165,7 +155,7 @@ g(y, \mathbf{z}; \bm{\theta}) = \frac{k(y, \mathbf{z}; \bm{\theta}) \{1+s(y, \ma
 \end{equation*}
 where $k$ may be a half-normal, hazard-rate or uniform function and $s$ may be zero (i.e., there are no adjustment terms), cosine, simple even polynomial or Hermite polynomial series. The denominator ensures that detection at zero distance is certain (i.e., $g(0, \mathbf{z};\bm{\theta})=1$).  Models are fit to the distance data using maximum likelihood.  The recommended strategy for most situations is to choose a small set of key function and adjustment combinations, and for each combination to choose the number of adjustment terms using forward selection, i.e., start with no adjustment terms and fit an increasing number of terms, stopping when the Akaike Information Criterion (AIC) fails to decrease.  The combination with the lowest AIC is then selected as the best model.  This strategy works well in practice in many cases: the key functions cover a range of realistic shapes for the detection function, so that often zero or one adjustments are sufficient to provide a good fit to the data, resulting in flexible and yet efficient estimation.  The functions are also flat at zero distance, and the key functions are non-increasing.  However, with the addition of adjustment terms, the resulting function is not necessarily non-increasing, nor does it necessarily lie within the interval $[0,1]$.  The solution to this implemented by default in Distance, when there are no additional covariates, is to use constrained maxmimizaion, taking 10 equally spaced distances $y_1=0, \ldots , y_{10}=w$ and ensuring that $g(y_i;\bm{\hat{\theta}})\geq g(y_{i+1}; \bm{\hat{\theta}})$ and that $g(y_{i+1};\bm{\hat{\theta}})\geq 0$ for $i=1,\ldots,9$.
 
-This solution presents a number of problems. Firstly, constrained maximization is a harder problem, meaning in practice that optimization algorithms may fail to find the maximum.  Secondly, constrained maximum likelihood estimates do not have the same appealing properties as their unconstrained cousins -- for example the usual estimator of the standard error of the parameters (square root of the inverse of the information matrix) can be biased.  Thirdly, constraints can only be applied at a finite number of points (10 in the case of Distance), which can lead to the constraint points missing non-monotonic parts of the function.  An example from the recent literature (Williams and Thomas, 2007) is shown in the left panel of Figure \ref{fig1}.  Lastly, it is not clear how to implement the constraints in the case where there are additional covariates, particularly continuous covariates.  One (computationally expensive) option would be to apply the constraints at every observed covariate combintion; however at present Distance uses unconstrained optimization when additional covariates are in the model.  Difficulties arising from this are illustrated in the central and right panels of Figure \ref{fig1} (from Pike et al., 2003), where a strongly non-monotonic function has been fit for some covariate values.  Detection probability estimates outside the range [0,1] are sometimes encountered in Distance during maximization with covariates (in which case the fitting algorithms fail).  Given all of the above, it may be preferable to use a formulation that guarantees monotonicity from the outset.
+This solution presents a number of problems. Firstly, constrained maximization is a harder problem, meaning in practice that optimization algorithms may fail to find the maximum.  Secondly, constrained maximum likelihood estimates do not have the same appealing properties as their unconstrained cousins -- for example the usual estimator of the standard error of the parameters (square root of the inverse of the information matrix) can be biased.  Thirdly, constraints can only be applied at a finite number of points (10 in the case of Distance), which can lead to the constraint points missing non-monotonic parts of the function.  An example from the recent literature (Williams and Thomas, 2007) is shown in the left panel of Figure \ref{fig1}.  Lastly, it is not clear how to implement the constraints in the case where there are additional covariates, particularly continuous covariates.  One (computationally expensive) option would be to apply the constraints at every observed covariate combination; however at present Distance uses unconstrained optimization when additional covariates are in the model.  Difficulties arising from this are illustrated in the central and right panels of Figure \ref{fig1} (from Pike et al., 2003), where a strongly non-monotonic function has been fit for some covariate values.  Detection probability estimates outside the range [0,1] are sometimes encountered in Distance during maximization with covariates (in which case the fitting algorithms fail).  Given all of the above, it may be preferable to use a formulation that guarantees monotonicity from the outset.
 
 \begin{figure}
 \centering
@@ -174,9 +164,9 @@ This solution presents a number of problems. Firstly, constrained maximization i
 \label{fig1}
 \end{figure}
 
-Mixture models have recently been applied in the capture-recapture literature following the work of Pledger (2000), Dorazio and Royle (2003), Pledger (2005) and Morgan \& Ridout (2008). Their main utility in capture-recapture is in better accounting for between-individual heterogeneity, which can cause severe bias if unmodelled (Link, 2003). In distance sampling this problem does not arise, provided that detection at zero distance is certain, the heterogeneity is not extreme, and a flexible detection function model is used (Buckland, 2004, Section 11.12).  Mixture models offer the potential for flexible modelling since the individual parts of the mixture model (the mixture components) can be combined in various ways to yeild a great many possible shapes, and yet all of these will be monotonic non-increasing so long as each component is monotonic non-increasing.  In addition, mixture models are potentially well suited to deal with cases of high heterogeneity -- for example where some part of the population  is only observable at close distances while others are readily detected almost regardless of distance.  This results in a ``spiked'' detection function with a long flat tail -- Figure \ref{fig1} shows relatively mild examples.  In a mixture model, different parts of the population could be represented by different components, so providing a good fit to such spiked data. 
+Mixture models have recently been applied in the capture-recapture literature following the work of Pledger (2000), Dorazio and Royle (2003), Pledger (2005) and Morgan \& Ridout (2008). Their main utility in capture-recapture is in better accounting for between-individual heterogeneity, which can cause severe bias if unmodelled (Link, 2003). In distance sampling this problem does not arise, provided that detection at zero distance is certain, the heterogeneity is not extreme, and a flexible detection function model is used (Buckland, 2004, Section 11.12).  Mixture models offer the potential for flexible modelling since the individual parts of the mixture model (the mixture components) can be combined in various ways to yield a great many possible shapes, and yet all of these will be monotonic non-increasing so long as each component is monotonic non-increasing.  In addition, mixture models are potentially well suited to deal with cases of high heterogeneity -- for example where some part of the population  is only observable at close distances while others are readily detected almost regardless of distance.  This results in a ``spiked'' detection function with a long flat tail -- Figure \ref{fig1} shows relatively mild examples.  In a mixture model, different parts of the population could be represented by different components, so providing a good fit to such spiked data. 
 
-In this paper, we introduce a new class of distance sampling detection function models, based on mixtures of simple parametric key functions.  In the next section, we describe the models.  We then illustrate their use by applying them to simulated data in Section 3, and to real data from a number of studies in Section 4. We also compare results with those obtained from the current standard key function and adjustment terms (K+A) approach, and by using a combined approach where both the mixtures and K+A models are applied and a final model selected using AIC.  We finish in Section 5 with a discussion of the utility of the new methods.  An R pacakge, \texttt{mmds} (for Mixture Model Distance Sampling), implementing and illustrating the methods is available from the Comprehensive R Archive Network (CRAN).
+In this paper, we introduce a new class of distance sampling detection function models, based on mixtures of simple parametric key functions.  In the next section, we describe the models.  We then illustrate their use by applying them to simulated data in Section 3, and to real data from a number of studies in Section 4. We also compare results with those obtained from the current standard key function and adjustment terms (K+A) approach, and by using a combined approach where both the mixtures and K+A models are applied and a final model selected using AIC.  We finish in Section 5 with a discussion of the utility of the new methods.  An R (R Core Team, 2006) package, \texttt{mmds} (for Mixture Model Distance Sampling), implementing and illustrating the methods is available from the Comprehensive R Archive Network (CRAN).
 
 \section{Finite mixture model detection functions}
 
@@ -267,12 +257,13 @@ Estimators for the variances of $N$ and $P_a$ are given in Web Appendix E.
 \label{s:sims}
 
 Extensive simulations were carried out to investigate performance, in terms of the accuracy of estimation of $P_a$ and $N$, under the circumstance when the true detection function model is not known to the estimation procedure.  
- Each simulation involved generating 200 replicate datasets from a specified detection function model (assuming the entire study area was included within the surveyed transects, i.e., $A=a$ in equation (\ref{e:popsize})), fitting each dataset with a range of mixture and key series plus adjustment term (K+A) models, and in each case recording estimated parameter values and abundance from the model with the lowest AIC in the class of mixture models, K+A models, and both combined.  The mixture models tried were 1-, 2-, and 3-point half-normal; the K+A models were half-normal plus cosine adjustments and hazard rate plus simple polynomial adjustments, both with monotonicity constraints implemented as described above. [Dave - do we want to say anything about how many adjustment terms max could be used?  Not a big deal.]  [We could also say something like: The simulation was run in the R software [Dave - reference to R?], version [x], with mixture models fit using the package mmds (version x) and K+A models fit using the package distance (version x), both written by the authors.  I didn't include this at present in an effort to save a little space, and also to avoid opening a can of worms about whether our K+A results are the same as you'd get in Distance.]
 
-Five different simulation scenarios were run, described below.  Within each scenario, a number of specific detection functions were tested to fully explore the sceanrio.  True parameter values and average detectabilities are given in Web Appendix C.  We also anticipated that performance would depend upon sample size. Firstly, the methods are likelihood-based and hence only asympotically unbiased even if the correct model is fit. Secondly, since AIC was used to select model complexity, then more flexible (and hence accurate) models could be expected to be selected given larger sample sizes.  Thirdly, mixture models are ``parameter hungry'' compared with K+A models in the sense that each additional mixture component requires 2 extra parameters, while each additional adjustment term requires only one; hence, given the use of AIC for model selection, the relative performance of the two approaches may change at different sample sizes.  We therefore ran each simultion using sample sizes (number of observations) of 30 (low), 60 (recommended minimum for line transects, Buckland et al. 2001), 120 (adequate), 480 (large) and 960 (very large).
+Each simulation involved generating 200 replicate datasets from a specified detection function model (assuming the entire study area was included within the surveyed transects, i.e., $A=a$ in equation (\ref{e:popsize})), fitting each dataset with a range of mixture and key series plus adjustment term (K+A) models, and in each case recording estimated parameter values and abundance from the model with the lowest AIC in the class of mixture models, K+A models, and both combined.  The mixture models tried were 1-, 2-, and 3-point half-normal; the K+A models were half-normal plus cosine adjustments and hazard rate plus simple polynomial adjustments, both with monotonicity constraints implemented as described above with a maximum of 3 adjustments fitted. The simulation was run in the R (R Core Team, 2006), version 2.14, with mixture models fit using the package mmds (version 1.1) and K+A models fit using the package Distance (version 0.6.1), both written by the authors.
+
+Five different simulation scenarios were run, described below.  Within each scenario, a number of specific detection functions were tested to fully explore the scenario.  True parameter values and average detectabilities are given in Web Appendix C.  We also anticipated that performance would depend upon sample size. Firstly, the methods are likelihood-based and hence only asymptotically unbiased even if the correct model is fit. Secondly, since AIC was used to select model complexity, then more flexible (and hence accurate) models could be expected to be selected given larger sample sizes.  Thirdly, mixture models are ``parameter hungry'' compared with K+A models in the sense that each additional mixture component requires 2 extra parameters, while each additional adjustment term requires only one; hence, given the use of AIC for model selection, the relative performance of the two approaches may change at different sample sizes.  We therefore ran each simulation using sample sizes (number of observations) of 30 (low), 60 (recommended minimum for line transects, Buckland et al. 2001), 120 (adequate), 480 (large) and 960 (very large).
 \begin{enumerate}
 	\item Line transect with 2-point half-normal mixture detection functions. Four different detection functions were tested; these are illustrated in the first row of Figure \ref{sim-detfcts}. The first two should be relatively easy to fit. The third should be harder, testing the behaviour of the models when the scale parameter of one of the mixture components is very large relative to the truncation distance. Finally, the fourth detection function has a large spike (i.e., a sharp decline in detectability at small distances), which is similar to that in some of the data we analyse in Section \ref{s:data}.
-	\item Point transect with detection functions as previous scenario. The pdfs are given in the second row of Figure \ref{sim-detfcts}.  We anticipate that performance will be worse for point transects, because the geometry of the sampling means there are few animals close to the point relative to those at larger distances, hence there are very few observations from the mixture component that is only detectable at smaller distances, even though these animals make up a significant proportion of the popultion.
+	\item Point transect with detection functions as previous scenario. The pdfs are given in the second row of Figure \ref{sim-detfcts}.  We anticipate that performance will be worse for point transects, because the geometry of the sampling means there are few animals close to the point relative to those at larger distances, hence there are very few observations from the mixture component that is only detectable at smaller distances, even though these animals make up a significant proportion of the population.
 	\item Line transect with 3-point half-normal detection functions. Two different models for the detection functions were used. They are shown in the third row of Figure \ref{sim-detfcts}. The first is much like the second line transect detection function, enabling us to investigate the efficacy of model selection. The second is a more complex shape that could only be created using a 3-point mixture; it has the added complication (as with the third line transect simulation) that one of the components has a large scale parameter relative to truncation distance.
 	\item Line transect with 2-point half-normal detection functions with additional covariates. Two different models were tested, the first of which has a binary factor covariate: half of the observations had covariate value 1 and half had covariate value 0. The second model had a continuous covariate, whose values were generated from a standard normal distribution function. Detection functions are shown in the fourth row of Figure \ref{sim-detfcts}, along with the marginal detection functions for the levels/quantiles of the covariates. One goal was to test the properties of the estimator in the presence of covariates, and for these runs we included the covariate in all models fit.  However, we additionally wished to evaluate the performance of the mixture model formulation in cases where a covariate affects detectability but the covariate is not available to the observer.  We therefore fit the same simulated datasets with mixture models that did not include covariates, and compared the resulting estimates to their with-covariate counterparts.
   \item Line transect with 2-point hazard rate mixture detection functions.  In all previous scenarios (except the continuous covariate not available to the observer), the true model was one of those in the candidate set.  Here, we instead used a mixture of hazard rate functions [same shape - something about how we chose the functions we did, what we were trying to show, etc.]
@@ -315,8 +306,6 @@ Further details of simulation results are given in Web Appendix D.
 \label{s:data}
 
 Given the performance of the method in simulation, several data sets were analysed using the method. Two data sets are reported here and two more data sets are reported in Web Appendices F and G. Analyses were performed in \texttt{mmds} (Mixture Model Distance Sampling), an \textsf{R} package written by the authors and available on CRAN. Results from using mixture model detection functions are compared with those from the original articles.
-
-[[\textbf{LEN}: is further detail needed for any of these?]]
 
 \subsection{Williams and Thomas (2007) cetacean survey}
 
@@ -472,6 +461,8 @@ Both authors would like to thank David Borchers, who suggested the parametrisati
 \bibitem{ } Pledger, S. (2000). Unified maximum likelihood estimates for closed capture-recapture models using mixtures. \textit{Biometrics} \textbf{56}(2), 434--442. 
 
 \bibitem{ } Pledger, S. (2005). The performance of mixture models in heterogeneous closed population capture-recapture. \textit{Biometrics} \textbf{61}(3), 868--873.
+
+\bibitem{ } R Core Team (2012). R: A language and environment for statistical computing. R Foundation for Statistical Computing, Vienna, Austria. ISBN 3-900051-07-0, \url{http://www.R-project.org/}.
 
 \bibitem{ } Thomas, L., Buckland, S. T., Rexstad, E. A., Laake, J. L., Strindberg, S., Hedley, S. L., Bishop, J. R. B., Marques, T. A. and Burnham, K. P. (2010). Distance software: design and analysis of distance sampling surveys for estimating population size. \textit{Journal of Applied Ecology} \textit{47}, 5--14.
 
